--- a/views/account.ejs
+++ b/views/account.ejs
@@ -115,7 +115,7 @@
 <script>
     document.getElementById("follow").addEventListener("click", function(){
         if ("<%=userID._id%>" != 0){
-            followUser("<%=user._id%>", "<%=userID._id%>");
+            followUser("<%=userID._id%>", "<%=user._id%>");
         }
     });
 </script>
